Fix: polyPreview labels sometimes overlap images

--- a/features/polyPreview/src/styles.css
+++ b/features/polyPreview/src/styles.css
@@ -119,7 +119,7 @@ button:active {
 }
 
 .header-content {
-    margin-right: 76px;
+    margin-right: 84px;
 }
 
 .circle-pagination {
